deps/chakrashim/core/test/strict/stricteval2-deferred.baseline
SyntaxError: Invalid usage of 'eval' in strict mode
	at code (stricteval2-deferred.js:8:74)
